[package]
name = "vf2-loader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.17"
env_logger = "0.9"
serialport = "4.2.0"
xmodem = { path = "../xmodem.rs" }
clap = { version = "4.1.8", features = ["derive"] }
